--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li>ewrw werrwe</li>
     </ol>
     <hr>
+    <img src="img/panguain.jpg">
+    <img src="img/pngan2.jpg">
     <h3>Odyssea Courses</h3>
     <ul style="list-style-type:square;">
         <li>Bike shop</li>
