--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <title>Habibe's site 🧐</title>
 </head>
 
-<body>
+<body style="background-color: rgb(152, 230, 210);">
+    <h3>Work axprience</h3>
+
+    <table>
+        <thead>
+            <tr>
+                <th>periods</th>
+                <th>experiences</th>
+            </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>2010-2015</td>
+            <td>c++ and c#</td>
+        </tr>
+        <tr>
+            <td>2015-2018</td>
+            <td>sql server</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>web development</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr><td>20</td></tr>
+        <tr><td></td></tr>
+    </tfoot>
+    </table>
     <h1>Habibeh Khavari</h1>
     <p>Student at <a href="https://www.odysea.com/">Odysea</a></p>
     <p><em>fghjkl;cvbndfghjk <strong>yghjkkl</strong> hjkl;;ljjhs jhjslkl; hskjklk jlkl.</em></p>
