--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
         </li>
         <li>Plumbing</li>
     </ul>
+<!-- mailto:foo@foo.foo -->
+    <form action="mailto:h.khavari1995@gmail.com" method="POST" enctype="text/plain">
+        <label>Your name</label><input type="text" name="contactName"><br>
+        <label>Your brithday</label><input type="date"><br>
+        <label>Your email</label><input type="email" name="cotactEmail"><br>
+        <label>Your phone</label><input type="text" name="NumberPhone"><br>
+        <label>I want to tell you that...</label>
+        <textarea rows="10" cols="80" name="contactComments" ></textarea>
+        <input type="submit">
+        </form>
 </body>
 
 </html>
