--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habibe's site 🧐</title>
+    <style>
+        body{
+            background-color: #e8ffff;
+        }
+        h3{
+           color: #213e3b;
+        }h1{
+           color: #213e3b;
+        }h2 {
+           color: #213e3b;
+        }
+
+    </style>
 </head>
 
-<body style="background-color: rgb(152, 230, 210);">
+<body >
     <h3>Work axprience</h3>
 
     <table>
@@ -55,7 +68,6 @@
         <li>ewrw werrwe</li>
     </ol>
     <hr>
-    <img src="img/panguain.jpg">
     <img src="img/pngan2.jpg">
     <h3>Odyssea Courses</h3>
     <ul style="list-style-type:square;">
