--- a/index.html
+++ b/index.html
@@ -16,59 +16,51 @@
         }h2 {
            color: #213e3b;
         }
+        hr{
+            border:dashed; width:20%;
+             text-align:center;
+        }
 
     </style>
 </head>
 
 <body >
-    <h3>Work axprience</h3>
-
+    <div>
+        <img src="img/pngan2.jpg" style="float: left;">
+        <h1>Habibeh Khavari</h1>
+        <p>Hi there
+            This is Habibeh,
+            I'm from Ghour, Afghanistan;
+            I have studied Computer Engineering in Iran. I want to be a Web Developer, I'm   Student at <a href="https://www.odysea.com/">Odysea</a>. I would like to learn making animations also.
+            One of my favourite work is drawing:)</p>
+            <hr>
+    </div>
+<br>
+<h2>Skills</h2>
     <table>
-        <thead>
-            <tr>
-                <th>periods</th>
-                <th>experiences</th>
-            </tr>
-        </thead>
         <tbody>
         <tr>
-            <td>2010-2015</td>
-            <td>c++ and c#</td>
+            <td>c++</td>
+            <td>&#x1F929 &#x1F929 &#x1F929</td>
         </tr>
         <tr>
-            <td>2015-2018</td>
-            <td>sql server</td>
+            <td>c#</td>
+            <td>&#x1F929 &#x1F929</td>
         </tr>
         <tr>
-            <td>2018</td>
-            <td>web development</td>
+            <td>web developing</td>
+            <td>&#x1F929</td>
         </tr>
     </tbody>
-    <tfoot>
-        <tr><td>20</td></tr>
-        <tr><td></td></tr>
-    </tfoot>
     </table>
-    <h1>Habibeh Khavari</h1>
-    <p>Student at <a href="https://www.odysea.com/">Odysea</a></p>
-    <p><em>fghjkl;cvbndfghjk <strong>yghjkkl</strong> hjkl;;ljjhs jhjslkl; hskjklk jlkl.</em></p>
-    <p><b> jhjklk hkjlksasamsj snjsnsjnsj jsnsjjso qs qs khkhkh vvhgv.</b></p>
-    <p><em>sadfdsfdfgg</em></p>
     <hr>
-    <h2>Books and Habbite</h2>
+    <h2>Habbites</h2>
     <ul>
-        <li>sdsfdsf fdssdf dsffds</li>
-        <li>sdsdds sdsda sdsad </li>
-        <li>ssdsd sddasd asdddd </li>
+        <li>drawings</li>
+        <li>sewing</li>
+        <li>dancing</li>
     </ul>
-    <h2>Skills</h2>
-    <ol>
-        <li>dfgfdg dfgfg</li>
-        <li>dfgfgfg wew</li>
-        <li>ewrw werrwe</li>
-    </ol>
     <hr>
-    <img src="img/pngan2.jpg">
     <h3>Odyssea Courses</h3>
     <ul style="list-style-type:square;">
         <li>Bike shop</li>
@@ -81,16 +73,17 @@
         </li>
         <li>Plumbing</li>
     </ul>
-<!-- mailto:foo@foo.foo -->
-    <form action="mailto:h.khavari1995@gmail.com" method="POST" enctype="text/plain">
-        <label>Your name</label><input type="text" name="contactName"><br>
-        <label>Your brithday</label><input type="date"><br>
-        <label>Your email</label><input type="email" name="cotactEmail"><br>
-        <label>Your phone</label><input type="text" name="NumberPhone"><br>
-        <label>I want to tell you that...</label>
-        <textarea rows="10" cols="80" name="contactComments" ></textarea>
-        <input type="submit">
-        </form>
+<a href="contact-me.html">contact me</a><hr>
+<a href="langueqes.html">langueqes</a>
+<!-- <form action="mailto:h.khavari1995@gmail.com" method="POST" enctype="text/plain">
+    <label>Your name</label><input type="text" name="contactName"><br>
+    <label>Your brithday</label><input type="date"><br>
+    <label>Your email</label><input type="email" name="cotactEmail"><br>
+    <label>Your phone</label><input type="text" name="NumberPhone"><br>
+    <label>I want to tell you that...</label>
+    <textarea rows="10" cols="80" name="contactComments" ></textarea>
+    <input type="submit">
+    </form> -->
 </body>
 
 </html>
