--- a/index.html
+++ b/index.html
@@ -5,37 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habibe's site 🧐</title>
-    <style>
-        body{
-            background-color: #e8ffff;
-        }
-        h3{
-           color: #213e3b;
-        }h1{
-           color: #213e3b;
-        }h2 {
-           color: #213e3b;
-        }
-        hr{
-            border:dashed; width:20%;
-             text-align:center;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body >
-    <div>
-        <img src="img/pngan2.jpg" style="float: left;">
+    <table>
+        <tr><td><img src="img/pngan2.jpg" width="300px" height="300px" ></td>
+        <td>
         <h1>Habibeh Khavari</h1>
         <p>Hi there
             This is Habibeh,
             I'm from Ghour, Afghanistan;
             I have studied Computer Engineering in Iran. I want to be a Web Developer, I'm   Student at <a href="https://www.odysea.com/">Odysea</a>. I would like to learn making animations also.
             One of my favourite work is drawing:)</p>
-            <hr>
-    </div>
-<br>
+        </td>
+        </tr>
+    </table>
+<hr>
 <h2>Skills</h2>
     <table>
         <tbody>
@@ -74,7 +60,7 @@
         <li>Plumbing</li>
     </ul>
 <a href="contact-me.html">contact me</a><hr>
-<a href="langueqes.html">langueqes</a>
+<a href="img/langueqes.html">langueqes</a>
 <!-- <form action="mailto:h.khavari1995@gmail.com" method="POST" enctype="text/plain">
     <label>Your name</label><input type="text" name="contactName"><br>
     <label>Your brithday</label><input type="date"><br>
