--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li>Plumbing</li>
     </ul>
 <a href="contact-me.html">contact me</a><hr>
-<a href="img/langueqes.html">langueqes</a>
+<a href="img/langueqes.html">langueges</a>
 <!-- <form action="mailto:h.khavari1995@gmail.com" method="POST" enctype="text/plain">
     <label>Your name</label><input type="text" name="contactName"><br>
     <label>Your brithday</label><input type="date"><br>
