--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habibe's site 🧐</title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+body{
+    background-color: red;
+}
+    </style>
 </head>
 
-<body >
+<body style="background-color: green;">
     <table>
         <tr><td><img src="img/pngan2.jpg" width="300px" height="300px" ></td>
         <td>
